@@ -1,5 +1,5 @@
-/****************************************************************************
- * arch/arm/src/sama5/sam_clockconfig.h
+/************************************************************************************
+ * configs/sama5d3x-ek/src/sam_norflash.c
  *
  *   Copyright (C) 2013 Gregory Nutt. All rights reserved.
  *   Author: Gregory Nutt <gnutt@nuttx.org>
@@ -31,59 +31,31 @@
  * ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
  * POSSIBILITY OF SUCH DAMAGE.
  *
- ****************************************************************************/
+ ************************************************************************************/
 
-#ifndef __ARCH_ARM_SRC_SAMA5_SAM_CLOCKCONFIG_H
-#define __ARCH_ARM_SRC_SAMA5_SAM_CLOCKCONFIG_H
-
-/****************************************************************************
+/************************************************************************************
  * Included Files
- ****************************************************************************/
+ ************************************************************************************/
 
 #include <nuttx/config.h>
 
-/****************************************************************************
- * Pre-processor Definitions
- ****************************************************************************/
+#include <debug.h>
 
-/****************************************************************************
- * Public Types
- ****************************************************************************/
+#include "sama5d3x-ek.h"
 
-/****************************************************************************
- * Inline Functions
- ****************************************************************************/
+#ifdef CONFIG_SAMA5_BOOT_CS0FLASH
 
-#ifndef __ASSEMBLY__
+/************************************************************************************
+ * Definitions
+ ************************************************************************************/
 
-/****************************************************************************
- * Public Data
- ****************************************************************************/
+/************************************************************************************
+ * Private Functions
+ ************************************************************************************/
 
-#undef EXTERN
-#if defined(__cplusplus)
-#define EXTERN extern "C"
-extern "C"
-{
-#else
-#define EXTERN extern
-#endif
-
-/****************************************************************************
- * Public Function Prototypes
- ****************************************************************************/
-
-/****************************************************************************
- * Name: sam_clockconfig
- *
- * Description:
- *   Called to initialize the SAM3/4.  This does whatever setup is needed to
- *   put the SoC in a usable state.  This includes the initialization of
- *   clocking using the settings in board.h.
- *
- ****************************************************************************/
-
-void sam_clockconfig(void);
+/************************************************************************************
+ * Public Functions
+ ************************************************************************************/
 
 /****************************************************************************
  * Name: board_norflash_config
@@ -122,14 +94,9 @@ void sam_clockconfig(void);
  *
  ****************************************************************************/
 
-#ifdef CONFIG_SAMA5_BOOT_CS0FLASH
-void board_norflash_config(void);
-#endif
-
-#undef EXTERN
-#if defined(__cplusplus)
+void board_norflash_config(void)
+{
+#warning Missing logic
 }
-#endif
 
-#endif /* __ASSEMBLY__ */
-#endif /* __ARCH_ARM_SRC_SAMA5_SAM_CLOCKCONFIG_H */
+#endif /* CONFIG_SAMA5_BOOT_CS0FLASH */
